add mongodb dependency and dockerfile

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -37,6 +41,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>projectplace</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
