--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.11.899</version>
+		</dependency>
 	</dependencies>
 
 	<build>
