--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,3 +2,8 @@ spring:
   data:
     mongodb:
       database: ProjectplaceDb
+
+aws:
+  access.key: testaccesskey
+  secret.key: testsecretkey
+  bucket.name: testbucketname
